Fix PatientPage content overflow issue: revert from hidden to auto

--- a/examples/medplum-provider/src/pages/patient/PatientPage.module.css
+++ b/examples/medplum-provider/src/pages/patient/PatientPage.module.css
@@ -21,6 +21,6 @@
   flex-direction: column;
   width: calc(100% - 350px);
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   border-inline-start: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 }
